--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,13 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
+    color: #7c7777;
+}
+link {
+    text-decoration: none;
     color: #097d85;
 }
+
 a:hover {
     text-decoration: underline;
 }
